--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,8 +18,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+          cache-dependency-path: go.sum
+
+      - run: |
+          go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.63.4
+          install-mode: none
