--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,6 +25,9 @@ linters:
     revive:
       rules:
         - name: comment-spacings
+    staticcheck:
+      dot-import-whitelist:
+        - github.com/onsi/ginkgo/v2
   exclusions:
     generated: lax
     rules:
