--- a/config/crd/bases/cloudflare.unmango.dev_cloudflareddeployments.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflareddeployments.yaml
@@ -8079,6 +8079,10 @@ spec:
               state:
                 type: string
             type: object
+        required:
+        - metadata
+        - spec
+        - status
         type: object
     served: true
     storage: true
