--- a/config/crd/bases/cloudflare.unmango.dev_cloudflareddeployments.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflareddeployments.yaml
@@ -14,7 +14,14 @@ spec:
     singular: cloudflareddeployment
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.replicas
+      name: Replicas
+      type: integer
+    - jsonPath: .status.state
+      name: State
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: CloudflaredDeployment is the Schema for the cloudflareddeployments
