--- a/.github/workflows/test-chart.yml
+++ b/.github/workflows/test-chart.yml
@@ -57,21 +57,22 @@ jobs:
           kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-cainjector
           kubectl wait --namespace cert-manager --for=condition=available --timeout=300s deployment/cert-manager-webhook
 
-      - name: Install Prometheus Operator CRDs
-        run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm repo update
-          helm install prometheus-crds prometheus-community/prometheus-operator-crds
-
-      - name: Install Prometheus via Helm
-        run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm repo update
-          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
-
-      - name: Wait for Prometheus to be ready
-        run: |
-          kubectl wait --namespace monitoring --for=condition=available --timeout=300s deployment/prometheus-server
+# TODO: Uncomment if Prometheus is enabled
+#      - name: Install Prometheus Operator CRDs
+#        run: |
+#          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+#          helm repo update
+#          helm install prometheus-crds prometheus-community/prometheus-operator-crds
+#
+#      - name: Install Prometheus via Helm
+#        run: |
+#          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+#          helm repo update
+#          helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
+#
+#      - name: Wait for Prometheus to be ready
+#        run: |
+#          kubectl wait --namespace monitoring --for=condition=available --timeout=300s deployment/prometheus-server
 
       - name: Install Helm chart for project
         run: |
@@ -81,6 +82,7 @@ jobs:
         run: |
           helm status my-release --namespace cloudflare-operator-system
 
-      - name: Check Presence of ServiceMonitor
-        run: |
-          kubectl wait --namespace cloudflare-operator-system --for=jsonpath='{.kind}'=ServiceMonitor servicemonitor/cloudflare-operator-controller-manager-metrics-monitor
+# TODO: Uncomment if prometheus.enabled is set to true to confirm that the ServiceMonitor gets created
+#      - name: Check Presence of ServiceMonitor
+#        run: |
+#          kubectl wait --namespace project-v4-with-plugins-system --for=jsonpath='{.kind}'=ServiceMonitor servicemonitor/project-v4-with-plugins-controller-manager-metrics-monitor
