Adds conditions to Cloudflared status
Adds the Conditions field to the CloudflaredStatus to provide more detailed information about the resource's state.

Adds RBAC rules for events, daemonsets, deployments, and pods, enabling the controller to interact with these resources.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -5,6 +5,34 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - daemonsets
+  - deployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - cloudflare.unmango.dev
   resources:
   - cloudflareds
