Dont generate attestations on PRs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,5 +43,5 @@ jobs:
           cache-to: type=gha
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          provenance: true
-          sbom: true
+          provenance: ${{ github.event_name != 'pull_request' }}
+          sbom: ${{ github.event_name != 'pull_request' }}
