Some CI optimizations

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -26,10 +26,12 @@ jobs:
       - name: Verify kind installation
         run: kind version
 
-      - name: Create kind cluster
-        run: kind create cluster
+      - name: Build and load Docker image
+        uses: docker/build-push-action@v6
+        with:
+          load: true
+          cache-from: type=gha
+          tags: ghcr.io/${{ github.repository }}
 
       - name: Running Test e2e
-        run: |
-          go mod tidy
-          make test-e2e
+        run: make test-e2e
