--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/checkout@v4
 
       - run: make ${{ matrix.target }}
-      - run: git diff --quiet || echo 'Worktree is not clean' && exit 1
+      - run: git diff --quiet || (echo 'Worktree is not clean' && exit 1)
