--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,5 +40,11 @@ jobs:
       - name: Clone the code
         uses: actions/checkout@v4
 
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+          cache-dependency-path: go.sum
+
       - run: make ${{ matrix.target }}
       - run: git diff --quiet || (echo 'Worktree is not clean' && exit 1)
