--- a/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
@@ -44,11 +44,15 @@ spec:
             description: CloudflaredSpec defines the desired state of Cloudflared.
             properties:
               config:
+                description: Config describes how to configure the cloudflared instance.
                 properties:
                   valueFrom:
+                    description: ValueFrom defines an existing source in the cluster
+                      to pull the cloudflared config from.
                     properties:
                       configMapKeyRef:
-                        description: Selects a key from a ConfigMap.
+                        description: ConfigMapKeyRef selects a key from an existing
+                          ConfigMap containing the cloudflared config.
                         properties:
                           key:
                             description: The key to select.
@@ -71,7 +75,8 @@ spec:
                         type: object
                         x-kubernetes-map-type: atomic
                       secretKeyRef:
-                        description: SecretKeySelector selects a key of a Secret.
+                        description: SecretKeyRef selects a key from an existing Secret
+                          containing the cloudflared config.
                         properties:
                           key:
                             description: The key of the secret to select from.  Must
@@ -98,15 +103,18 @@ spec:
                 type: object
               kind:
                 default: DaemonSet
-                description: CloudflaredDeploymentKind describes the kind of deployment
-                  to create.
+                description: |-
+                  Kind describes the kind of kubernetes resource that will run the cloudflared instance.
+                  Available options are Deployment or Daemonset, default is DaemonSet.
                 enum:
                 - DaemonSet
                 - Deployment
                 type: string
               template:
-                description: PodTemplateSpec describes the data a pod should have
-                  when created from a template
+                description: |-
+                  Template allows customizing the PodTemplateSpec used by the resource specified in Kind.
+                  To customize the cloudflared container, add a container named `cloudflared` to containers.
+                  Currently, the only supported `cloudflared` customization is `image`.
                 properties:
                   metadata:
                     description: |-
