--- a/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
@@ -14,11 +14,7 @@ spec:
     singular: cloudflared
   scope: Namespaced
   versions:
-  - additionalPrinterColumns:
-    - jsonPath: .status.state
-      name: State
-      type: string
-    name: v1alpha1
+  - name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Cloudflared is the Schema for the cloudflareds API.
@@ -8210,8 +8206,6 @@ spec:
                 x-kubernetes-list-map-keys:
                 - type
                 x-kubernetes-list-type: map
-              state:
-                type: string
             type: object
         type: object
     served: true
