--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/cloudflare.unmango.dev_cloudflareds.yaml
+- bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
