--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - cloudflare_v1alpha1_cloudflared.yaml
+- cloudflare_v1alpha1_cloudflaretunnel.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
