--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -36,6 +36,7 @@ rules:
   - cloudflare.unmango.dev
   resources:
   - cloudflareds
+  - cloudflaretunnels
   verbs:
   - create
   - delete
@@ -48,12 +49,14 @@ rules:
   - cloudflare.unmango.dev
   resources:
   - cloudflareds/finalizers
+  - cloudflaretunnels/finalizers
   verbs:
   - update
 - apiGroups:
   - cloudflare.unmango.dev
   resources:
   - cloudflareds/status
+  - cloudflaretunnels/status
   verbs:
   - get
   - patch
