Defines CloudflareTunnelHealth type
Introduces a dedicated `CloudflareTunnelHealth` type to represent the health status of a Cloudflare Tunnel.

This change replaces the generic string type previously used for the status field with a custom enum. This provides better type safety and validation for the tunnel's health status. It also includes kubebuilder validation to ensure that only valid status values are used.

--- a/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
@@ -228,6 +228,11 @@ spec:
                   run), `degraded` (tunnel is active and able to serve traffic but in an unhealthy
                   state), `healthy` (tunnel is active and able to serve traffic), or `down`
                   (tunnel can not serve traffic as it has no connections to the Cloudflare Edge).
+                enum:
+                - healthy
+                - degraded
+                - inactive
+                - down
                 type: string
             type: object
         type: object
