Setup stuff for using the api token in e2e tests

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -38,3 +38,5 @@ jobs:
 
       - name: Running Test e2e
         run: make test-e2e
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
