Configures sample CloudflareTunnel spec
Populates sample CloudflareTunnel spec with account ID,
config source, and name.

Removes the 'Name' column from the CloudflareTunnel status
as it's redundant.

Removes deletion timestamp logging.

--- a/config/samples/cloudflare_v1alpha1_cloudflared.yaml
+++ b/config/samples/cloudflare_v1alpha1_cloudflared.yaml
@@ -5,5 +5,4 @@ metadata:
     app.kubernetes.io/name: cloudflare-operator
     app.kubernetes.io/managed-by: kustomize
   name: cloudflared-sample
-spec:
-  # TODO(user): Add fields here
+spec: {}
