--- a/config/samples/cloudflare_v1alpha1_cloudflaretunnel.yaml
+++ b/config/samples/cloudflare_v1alpha1_cloudflaretunnel.yaml
@@ -6,4 +6,6 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: cloudflaretunnel-sample
 spec:
-  # TODO(user): Add fields here
+  accountId: $CLOUDFLARE_ACCOUNT_ID
+  configSource: cloudflare
+  name: cloudflaretunnel-sample
