Adds tunnel type to status
Adds tunnel type to CloudflareTunnel status.

Also adds connection timestamps to status.

--- a/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
@@ -264,6 +264,17 @@ spec:
                 - inactive
                 - down
                 type: string
+              type:
+                description: The type of tunnel.
+                enum:
+                - cfd_tunnel
+                - warp_connector
+                - warp
+                - magic
+                - ip_sec
+                - gre
+                - cni
+                type: string
             type: object
         type: object
     served: true
