--- a/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
@@ -161,7 +161,6 @@ spec:
             required:
             - accountId
             - configSource
-            - name
             type: object
           status:
             description: CloudflareTunnelStatus defines the observed state of CloudflareTunnel.
@@ -246,6 +245,9 @@ spec:
                 type: string
               id:
                 description: UUID of the tunnel.
+                type: string
+              name:
+                description: A user-friendly name for a tunnel.
                 type: string
               remoteConfig:
                 description: |-
