Adds account ID to Cloudflared configuration
Introduces `CloudflaredConfigInline` to group tunnel ID and account ID.

This allows specifying the account ID alongside the tunnel ID
directly in the Cloudflared configuration.

The change also updates the deepcopy logic for the new struct.

--- a/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflareds.yaml
@@ -48,9 +48,9 @@ spec:
             properties:
               config:
                 description: Config describes how to configure the cloudflared instance.
-                maxProperties: 1
-                minProperties: 1
                 properties:
+                  accountId:
+                    type: string
                   tunnelId:
                     description: The id of an existing Cloudflare tunnel to run.
                     type: string
