Switch around the e2e tests to exercise tunnel refs

--- a/config/samples/cloudflare_v1alpha1_cloudflared.yaml
+++ b/config/samples/cloudflare_v1alpha1_cloudflared.yaml
@@ -5,4 +5,7 @@ metadata:
     app.kubernetes.io/name: cloudflare-operator
     app.kubernetes.io/managed-by: kustomize
   name: cloudflared-sample
-spec: {}
+spec:
+  config:
+    tunnelRef:
+      name: cloudflaretunnel-sample
