--- a/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
@@ -300,6 +300,11 @@ spec:
               id:
                 description: UUID of the tunnel.
                 type: string
+              instances:
+                description: Total number of cloudflared instances targeted by this
+                  tunnel (their labels match the selector).
+                format: int32
+                type: integer
               name:
                 description: A user-friendly name for a tunnel.
                 type: string
