Add printer column and regen dist

--- a/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_cloudflaretunnels.yaml
@@ -36,6 +36,9 @@ spec:
     - jsonPath: .status.connsInactiveAt
       name: Inactive At
       type: string
+    - jsonPath: .status.instances
+      name: Instances
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
