--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,9 @@
 {
     "recommendations": [
         "golang.go",
-        "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-containers",
         "ms-kubernetes-tools.vscode-kubernetes-tools",
-        "mkhl.direnv"
+        "mkhl.direnv",
+        "ms-azuretools.vscode-containers"
     ]
 }
