Updates Cloudflared spec
Updates the Cloudflared spec to remove the tunnelRef and adds a cloudflared section to the CloudflareTunnel spec.

This change allows the operator to manage the Cloudflared instance and associate it with a CloudflareTunnel resource.

--- a/config/samples/cloudflare_v1alpha1_cloudflaretunnel.yaml
+++ b/config/samples/cloudflare_v1alpha1_cloudflaretunnel.yaml
@@ -8,4 +8,11 @@ metadata:
 spec:
   accountId: $CLOUDFLARE_ACCOUNT_ID
   configSource: cloudflare
-  name: cloudflaretunnel-sample
+  cloudflared:
+    selector:
+      matchLabels:
+        app.kubernetes.io/name: sample
+    template:
+      metadata:
+        labels:
+          app.kubernetes.io/name: sample
