--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -2,4 +2,5 @@
 resources:
 - cloudflare_v1alpha1_cloudflared.yaml
 - cloudflare_v1alpha1_cloudflaretunnel.yaml
+- cloudflare_v1alpha1_dnsrecord.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
