--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
 - ../crd
 - ../rbac
 - ../manager
+- ../ingress-class
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
 #- ../webhook
