--- a/config/crd/bases/cloudflare.unmango.dev_dnsrecords.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_dnsrecords.yaml
@@ -341,6 +341,9 @@ spec:
             type: object
           status:
             description: DnsRecordStatus defines the observed state of DnsRecord.
+            properties:
+              id:
+                type: string
             type: object
         type: object
     served: true
