Adds status fields to DNS record
Adds fields to the DNS record status to reflect the observed state, including ID, name, comment, content, and type.
These additions allow for better tracking and management of DNS records.

--- a/config/crd/bases/cloudflare.unmango.dev_dnsrecords.yaml
+++ b/config/crd/bases/cloudflare.unmango.dev_dnsrecords.yaml
@@ -342,7 +342,15 @@ spec:
           status:
             description: DnsRecordStatus defines the observed state of DnsRecord.
             properties:
+              comment:
+                type: string
+              content:
+                type: string
               id:
+                type: string
+              name:
+                type: string
+              type:
                 type: string
             type: object
         type: object
