Add a spec to the sample dns record

--- a/config/samples/cloudflare_v1alpha1_dnsrecord.yaml
+++ b/config/samples/cloudflare_v1alpha1_dnsrecord.yaml
@@ -6,4 +6,8 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: dnsrecord-sample
 spec:
-  # TODO(user): Add fields here
+  zoneId: $CLOUDFLARE_ZONE_ID
+  record:
+    aRecord:
+      name: cloudflare-operator-sample
+      content: 1.1.1.1
