--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,12 @@
 root = true
 
+[*]
+indent_style = tab
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.{yaml,yml}]
+indent_style = space
+
 [Dockerfile]
 indent_style = tab
