--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,7 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
       - uses: helm/chart-releaser-action@v1.7.0
+        with:
+          charts_dir: dist
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
